--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "d3": "^7.8.5",
+    "jschardet": "^3.0.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
